Segunad versión avanzada, falta resolever problema de Slider

--- a/index.html
+++ b/index.html
@@ -76,8 +76,70 @@
                 </nav>
             
                 <section class="movies">
-                    <div class="categories">
-                        <div class="card-movie">
+
+                    <div id="slide1" class="movi-wrapper-row uno">
+
+                        <a href="#slide3" class="nav-arrow left"><i class="fas fa-chevron-left"></i></a>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/batmaninicia.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/spider-man_22.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/100.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/advnger.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/rapidos y fueriosos 5.jpg" alt="">
+                            </div>
+                        <a href="#slide2" class="nav-arrow right"><i class="fas fa-chevron-right"></i></a>
+                        
+                    </div>
+
+                    <div id="slide2" class="movi-wrapper-row dos">
+                        <a href="#slide1" class="nav-arrow left"><i class="fas fa-chevron-left"></i></a>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/batmaninicia.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/spider-man_22.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/100.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/advnger.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/rapidos y fueriosos 5.jpg" alt="">
+                            </div>
+                        <a href="#slide3" class="nav-arrow right"><i class="fas fa-chevron-right"></i></a>
+                    </div>
+
+                    <div id="slide3" class="movi-wrapper-row tres">
+                        <a href="#slide2" class="nav-arrow left"><i class="fas fa-chevron-left"></i></a>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/batmaninicia.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/spider-man_22.jpg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/100.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/advnger.jpeg" alt="">
+                            </div>
+                            <div class="img-wrapper">
+                                <img class="img-movie" src="./img/rapidos y fueriosos 5.jpg" alt="">
+                            </div>
+                        <a href="#slide1" class="nav-arrow right"><i class="fas fa-chevron-right"></i></a>
+                    </div>
+                    <!-- <div class="categories"> -->
+                        <!-- <div class="card-movie">
                             <div class="movie-body">
                                 <h2>Titulo</h2>
                                 <p>Sinopsis</p>
@@ -115,8 +177,8 @@
                                 <p>Sinopsis</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="categories"></div>
+                    </div> -->
+                    <!-- <div class="categories"></div> -->
                 </section>
                 <footer class="footer">
                     <div class="autor">
